# inswapper-Detection

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-train.txt  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/routers/: admin.py  detection.py  health.py
app/schemas/: common.py  detection.py
configs/: convnext_tiny.yaml
core/: __init__.py  face_detection.py  frequency.py  inference.py  model.py  postprocessing.py  preprocessing.py  scoring.py  types.py  video.py
data/: README.md  test.csv
scripts/: build_processed_crop_manifest.py  build_video_frame_manifest.py  build_video_manifest.py  build_zarr_dataset.py  predict_video.py  split_metadata.py
tests/: conftest.py  test_api.py  test_inference.py  test_preprocessing.py
training/: __init__.py  dataset.py  evaluate.py  losses.py  metrics.py  train.py  trainer.py  utils.py
